--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
+    "react-router-transition": "^2.1.0",
     "react-scripts": "4.0.3",
     "react-spring-bottom-sheet": "^3.2.1",
     "react-transition-group": "^4.4.1",
